# connected_mobility_lab

src/common-interfaces/: .gitignore  .gitlab-ci.yml  CHANGELOG  LICENSE  README.md
src/common-interfaces/cpm_lab_commonroad_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/common-interfaces/cpm_lab_commonroad_msgs/idl/: CommonroadDDSCircle.idl  CommonroadDDSGoalState.idl  CommonroadDDSInterval.idl  CommonroadDDSPoint.idl  CommonroadDDSPolygon.idl  CommonroadDDSPositionInterval.idl  CommonroadDDSRectangle.idl  CommonroadDDSShape.idl  CommonroadObstacle.idl  CommonroadObstacleList.idl
src/common-interfaces/cpm_lab_commonroad_msgs/msg/: CommonroadDDSCircle.msg  CommonroadDDSGoalState.msg  CommonroadDDSInterval.msg  CommonroadDDSPolygon.msg  CommonroadDDSPositionInterval.msg  CommonroadDDSRectangle.msg  CommonroadDDSShape.msg  CommonroadObstacle.msg  CommonroadObstacleList.msg
src/common-interfaces/cpm_lab_lab_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/common-interfaces/cpm_lab_lab_msgs/msg/: PathPoint.msg  SystemTrigger.msg  VehicleCommand.msg  VehicleObservation.msg  VehicleState.msg  VehicleStateList.msg
src/common-interfaces/cpm_lab_map_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/common-interfaces/cpm_lab_map_msgs/msg/: LaneControlLight.msg  LaneControlLightSegment.msg  Lanelet2MapBin.msg
src/common-interfaces/cpm_lab_map_msgs/srv/: GetLanelet2Map.srv
src/common-interfaces/documentation/: logo.ai
src/indoor-positioning-system/: .gitignore  .gitlab-ci.yml  README.md
src/indoor-positioning-system/cpm_lab_indoor_positioning_system/: CMakeLists.txt  package.xml
src/indoor-positioning-system/cpm_lab_indoor_positioning_system/cmake/: FindPYLON.cmake
src/indoor-positioning-system/cpm_lab_indoor_positioning_system/component/: IndoorPositioningSystemParameterRos.hpp  indoor_positioning_system_node.cpp  indoor_positioning_system_ros.hpp
src/indoor-positioning-system/cpm_lab_indoor_positioning_system/config/: aachen2.yaml  aachen2_backup.yaml  aachen3.yaml  aachen3_1.yaml  aachen3_2.yaml  aachen3_4.yaml  default.yaml
src/indoor-positioning-system/cpm_lab_indoor_positioning_system/include/indoor_positioning_system/: Definitions.hpp  IndoorPositioningSystem.hpp  IndoorPositioningSystemParameter.hpp  LedDetection.hpp  PointProjection.hpp  PointUndistortion.hpp  PoseCalculation.hpp  VehicleDetection.hpp  VehicleIdentification.hpp  VehicleTracking.hpp  visibility_control.hpp
src/indoor-positioning-system/cpm_lab_indoor_positioning_system/launch/: default.launch.py  ips.launch.py
src/indoor-positioning-system/cpm_lab_indoor_positioning_system/src/: IndoorPositioningSystem.cpp  IndoorPositioningSystemParameter.cpp  LedDetection.cpp  PointProjection.cpp  PointUndistortion.cpp  PoseCalculation.cpp  VehicleDetection.cpp  VehicleIdentification.cpp  VehicleTracking.cpp  dummy.cpp
