<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpm_lab_commonroad_msgs</name>
  <version>0.1.2</version>
  <description>Custom messages used for the commonroad scenarios.</description>
  <maintainer email="schaefer@embedded.rwth-aachen.de">Simon Schäfer</maintainer>
  <license>MIT - License</license>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
